--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,13 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
                              http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
+
+    <!-- Default landing page -->
+    <welcome-file-list>
+        <welcome-file>login.html</welcome-file>
+    </welcome-file-list>
+
+    <!-- ControllerServlet: general routing -->
     <servlet>
         <servlet-name>ControllerServlet</servlet-name>
         <servlet-class>ca.algonquin.cst8288.controller.ControllerServlet</servlet-class>
@@ -12,6 +19,8 @@
         <servlet-name>ControllerServlet</servlet-name>
         <url-pattern>/controller</url-pattern>
     </servlet-mapping>
+
+    <!-- LoginServlet -->
     <servlet>
         <servlet-name>LoginServlet</servlet-name>
         <servlet-class>ca.algonquin.cst8288.web.LoginServlet</servlet-class>
@@ -20,6 +29,18 @@
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/login</url-pattern>
     </servlet-mapping>
+
+    <!-- RegisterServlet (建议添加) -->
+    <servlet>
+        <servlet-name>RegisterServlet</servlet-name>
+        <servlet-class>ca.algonquin.cst8288.web.RegisterServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>RegisterServlet</servlet-name>
+        <url-pattern>/register</url-pattern>
+    </servlet-mapping>
+
+    <!-- VehicleManagementServlet -->
     <servlet>
         <servlet-name>VehicleManagementServlet</servlet-name>
         <servlet-class>ca.algonquin.cst8288.web.VehicleManagementServlet</servlet-class>
@@ -28,6 +49,8 @@
         <servlet-name>VehicleManagementServlet</servlet-name>
         <url-pattern>/vehicle</url-pattern>
     </servlet-mapping>
+
+    <!-- DashboardServlet -->
     <servlet>
         <servlet-name>DashboardServlet</servlet-name>
         <servlet-class>ca.algonquin.cst8288.web.DashboardServlet</servlet-class>
@@ -36,7 +59,5 @@
         <servlet-name>DashboardServlet</servlet-name>
         <url-pattern>/dashboard</url-pattern>
     </servlet-mapping>
-    <welcome-file-list>
-        <welcome-file>login.html</welcome-file>
-    </welcome-file-list>
+
 </web-app>
